--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -7,7 +7,7 @@
 			<div class="row">
                 <div class="col-md-6">
                     <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
-                    <div class="text-muted" data-ng-hide="!beer.brewery">by </div><div class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></div>
+                    <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></span>
                 </div>
                 <div class="pull-right">
                     <small data-ng-bind="beer.bestBefore"></small>
