--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -1,10 +1,13 @@
-<section data-ng-controller="BeersController" data-ng-init="find()">
+<section class="beerListBG" data-ng-controller="BeersController" data-ng-init="find()">
     <div class="page-header">
         <h1>Beers</h1>
     </div>
     <div class="list-group">
         <a data-ng-repeat="beer in beers" data-ng-href="#!/beers/{{beer._id}}" class="list-group-item">
 			<div class="row">
+                <div class="col-md-1 text-center">
+                    <big data-ng-bind="beer.quantity"></big>
+                </div>
                 <div class="col-md-6">
                     <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
                     <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></span>
