--- a/public/modules/beers/views/view-beer.client.view.html
+++ b/public/modules/beers/views/view-beer.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="BeersController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="beer.name"></h1>
+		<h1 data-ng-bind="beer.name"></h1><span data-ng-hide="!beer.brewery"> by </span><span data-ng-bind="beer.brewery"></span>
 	</div>
 	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == beer.user._id))">
 		<a class="btn btn-primary" href="/#!/beers/{{beer._id}}/edit">
