--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -1,6 +1,28 @@
 <section class="beerListBG" data-ng-controller="BeersController" data-ng-init="find()">
     <div class="page-header">
-        <h1>Beers</h1>
+        <h1>BierCell</h1>
+        <a type="button" class="btn btn-success" id="addBeerButton" href="/#!/beers/create">+</a>
+        <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
+        <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li>
+						<a href="/#!/settings/profile">Edit Profile</a>
+					</li>
+					<li>
+						<a href="/#!/settings/accounts">Manage Social Accounts</a>
+					</li>
+					<li data-ng-show="authentication.user.provider === 'local'">
+						<a href="/#!/settings/password">Change Password</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a href="/auth/signout">Signout</a>
+					</li>
+				</ul>
+        </li>
     </div>
     <div class="list-group beerList">
         <a data-ng-repeat="beer in beers" data-ng-href="#!/beers/{{beer._id}}" class="list-group-item beerListItem">
@@ -13,7 +35,7 @@
                     <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></span>
                 </div>
                 <div class="pull-right">
-                    <small data-ng-bind="{{beer.bestBefore | date:'dd-MM-yyyy'}}"></small>
+                    <small data-ng-bind="{{beer.bestBefore|date:'mediumDate'}}"></small>
                 </div>
             </div>
         </a>
