--- a/public/modules/beers/views/view-beer.client.view.html
+++ b/public/modules/beers/views/view-beer.client.view.html
@@ -1,6 +1,29 @@
 <section data-ng-controller="BeersController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="beer.name"></h1><span data-ng-hide="!beer.brewery"> by </span><span data-ng-bind="beer.brewery"></span>
+		<a href="/#!/"><h1>BierCell</h1></a> <span class="glyphicon glyphicon-chevron-right"></span>
+        <h1 data-ng-bind="beer.name"></h1><span data-ng-hide="!beer.brewery"> by </span><span data-ng-bind="beer.brewery"></span>
+        <a type="button" class="btn btn-success" id="addBeerButton" href="/#!/beers/create">+</a>
+        <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
+        <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li>
+						<a href="/#!/settings/profile">Edit Profile</a>
+					</li>
+					<li>
+						<a href="/#!/settings/accounts">Manage Social Accounts</a>
+					</li>
+					<li data-ng-show="authentication.user.provider === 'local'">
+						<a href="/#!/settings/password">Change Password</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a href="/auth/signout">Signout</a>
+					</li>
+				</ul>
+        </li>
 	</div>
 	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == beer.user._id))">
 		<a class="btn btn-primary" href="/#!/beers/{{beer._id}}/edit">
