--- a/public/modules/users/views/settings/change-password.client.view.html
+++ b/public/modules/users/views/settings/change-password.client.view.html
@@ -1,5 +1,30 @@
-<section class="row" data-ng-controller="SettingsController">
-	<h3 class="col-md-12 text-center">Change your password</h3>
+<section class="row container" data-ng-controller="SettingsController">
+    <div class="page-header">
+        <a href="/#!/"><h1>BierCell</h1></a> <span class="glyphicon glyphicon-chevron-right"></span>
+        <h1>Change Password</h1>
+
+        <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
+        <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+				</a>
+				<ul class="dropdown-menu">
+					<li>
+						<a href="/#!/settings/profile">Edit Profile</a>
+					</li>
+					<li>
+						<a href="/#!/settings/accounts">Manage Social Accounts</a>
+					</li>
+					<li data-ng-show="authentication.user.provider === 'local'">
+						<a href="/#!/settings/password">Change Password</a>
+					</li>
+					<li class="divider"></li>
+					<li>
+						<a href="/auth/signout">Signout</a>
+					</li>
+				</ul>
+        </li>
+    </div>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="changeUserPassword()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
