--- a/public/modules/beers/views/view-beer.client.view.html
+++ b/public/modules/beers/views/view-beer.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="BeersController" data-ng-init="findOne()">
 	<div class="page-header">
-		<a href="/#!/"><h1>BierCell</h1></a> <span class="glyphicon glyphicon-chevron-right"></span>
+		<a href="/#!/"><h1>BierCell</h1></a> <span class="glyphicon glyphicon-chevron-right" id="breadcrumb"></span>
         <h1 data-ng-bind="beer.name"></h1><span data-ng-hide="!beer.brewery"> by </span><span data-ng-bind="beer.brewery"></span>
         <a type="button" class="btn btn-success" id="addBeerButton" href="/#!/beers/create">+</a>
         <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
