--- a/public/modules/beers/css/beers.css
+++ b/public/modules/beers/css/beers.css
@@ -34,7 +34,7 @@
     border-width: 3px;
 }.page-header h1 {
     display:inline;
-}#breadcrumb {
+}.glyphicon-chevron-right {
     padding: 8px;
     position: relative;
     top:-4px;
