Added correct fields to edit view

--- a/public/modules/beers/views/edit-beer.client.view.html
+++ b/public/modules/beers/views/edit-beer.client.view.html
@@ -33,6 +33,16 @@
                     <div class="controls">
                         <input type="text" data-ng-model="beer.name" id="name" class="form-control" placeholder="Name" required>
                     </div>
+
+                    <label class="control-label" for="brewery">Brewery</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="brewery" id="brewery" class="form-control" placeholder="Name">
+                    </div>
+
+                    <label class="control-label" for="name">Name</label>
+                    <div class="controls">
+                        <input type="date" data-ng-model="bestBefore" id="date" class="form-control">
+                    </div>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Update" class="btn btn-default">
