Fixed some issues with editing a beer. The date is still not editable... :F

--- a/public/modules/beers/views/edit-beer.client.view.html
+++ b/public/modules/beers/views/edit-beer.client.view.html
@@ -36,12 +36,12 @@
 
                     <label class="control-label" for="brewery">Brewery</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="brewery" id="brewery" class="form-control" placeholder="Name">
+                        <input type="text" data-ng-model="beer.brewery" id="brewery" class="form-control" placeholder="Name">
                     </div>
 
                     <label class="control-label" for="name">Name</label>
                     <div class="controls">
-                        <input type="date" data-ng-model="bestBefore" id="date" class="form-control">
+                        <input type="date" data-ng-model="beer.bestBefore" id="date" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
