--- a/public/modules/users/views/settings/social-accounts.client.view.html
+++ b/public/modules/users/views/settings/social-accounts.client.view.html
@@ -6,7 +6,7 @@
         <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
         <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+					<span data-ng-bind="user.displayName"></span> <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
 					<li>
