--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -25,20 +25,21 @@
         </li>
     </div>
     <div class="list-group beerList">
-        <a data-ng-repeat="beer in beers" data-ng-href="#!/beers/{{beer._id}}" class="list-group-item beerListItem">
+        <div data-ng-repeat="beer in beers" class="list-group-item beerListItem">
 			<div class="row">
                 <div class="col-md-1 text-center">
-                    - <big data-ng-bind="beer.quantity"></big> +
+                    <input type="submit" ng-click="subtractBeer(beer)" class="btn btn-default" value="-">
+                    <big data-ng-model="beer.quantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer(beer)" class="btn btn-default" value="+">
                 </div>
-                <div class="col-md-6">
-                    <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
-                    <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></span>
-                </div>
-                <div class="pull-right">
-                    <small data-ng-bind="{{beer.bestBefore|date:'mediumDate'}}"></small>
-                </div>
+                <a href="#!/beers/{{beer._id}}">
+                    <div class="col-md-11">
+                        <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
+                        <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-ng-bind="beer.brewery"></span>
+                        <span>, best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
+                    </div>
+                </a>
             </div>
-        </a>
+        </div>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!beers.$resolved || beers.length">
     	No Beers yet, why don't you <a href="/#!/beers/create">create one</a>?
