--- a/public/modules/beers/views/create-beer.client.view.html
+++ b/public/modules/beers/views/create-beer.client.view.html
@@ -1,6 +1,10 @@
 <section data-ng-controller="BeersController">
     <div class="page-header">
+
+        <!-- Page header, clickable, goes to front page -->
         <a href="/#!/"><h1>BierCell</h1></a> <span class="glyphicon glyphicon-chevron-right"></span><h1> New Beer</h1>
+
+        <!-- pull-right menu with user actions -->
         <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
         <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -22,19 +26,22 @@
 					</li>
 				</ul>
         </li>
+
     </div>
+
+    <!-- Beer creation form -->
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="name">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name of your newest beer acquisition" required>
                     </div>
                 </div><div class="form-group">    
                     <label class="col-sm-2 control-label" for="brewery">Brewery</label>
                     <div class="col-sm-10">
-                        <input type="text" data-ng-model="brewery" id="brewery" class="form-control" placeholder="Brewery">
+                        <input type="text" data-ng-model="brewery" id="brewery" class="form-control" placeholder="Name of the brewery it was made in">
                     </div>
                 </div><div class="form-group">   
                     <label class="col-sm-2 control-label" for="bestBefore">Best Before</label>
@@ -44,12 +51,12 @@
                 </div><div class="form-group">   
                     <label class="col-sm-2 control-label" for="quantity">Quantity</label>
                     <div class="col-sm-10">
-                        <input type="number" data-ng-model="quantity" id="quantity" placeholder="1" class="form-control">
+                        <input type="number" data-ng-model="quantity" id="quantity" placeholder="How many do you have? Leave empty for 1." class="form-control">
                     </div>
                 </div><div class="form-group">
                     <label class="col-sm-2 control-label" for="price">Price per beer</label>
                     <div class="col-sm-10">
-                        <input type="text" data-ng-model="price" id="price" placeholder="0.00" class="form-control">
+                        <input type="text" data-ng-model="price" id="price" placeholder="How much did one beer cost? Use periods for decimal points." class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
