--- a/public/modules/beers/views/edit-beer.client.view.html
+++ b/public/modules/beers/views/edit-beer.client.view.html
@@ -62,6 +62,15 @@
                         <input type="date" data-ng-model="beer.bestBefore" id="date" class="form-control">
                     </div>
 
+                    <label class="control-label" for="quantity">Quantity</label>
+                    <div class="controls">
+                        <input type="number" data-ng-model="beer.quantity" id="quantity" class="form-control">
+                    </div>
+
+                    <label class="control-label" for="price">Price</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="beer.price" id="price" class="form-control">
+                    </div>
                 </div>
 
                 <!-- Submit button -->
