--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -31,21 +31,18 @@
     </div>
 
     <!-- Content root -->
-    <div class="list-group beerList" ng-init="orderby='bestBefore'">
+    <div class="list-group beerList" ng-init="orderSettings={orderby:'bestBefore',selected:'false'}">
 
-      <button ng-click="orderby='quantity'" class="btn sortButton">Quantity</button>
-      <button ng-click="orderby='price'" class="btn sortButton">Price</button>
-      <button ng-click="orderby='bestBefore'" class="btn sortButton">Best Before</button>
-      <button ng-click="orderby='name'" class="btn sortButton">Name</button>
+        <div data-ng-repeat="button in buttons" class="btn-group inline">
+            <button ng-click="direction=direction=='+'?'-':'+';orderSettings.orderby=direction+button.param" class="btn sortButton">{{button.title}}</button>
+        </div>
 
-      <div data-ng-repeat="beer in beers | orderBy:orderby" class="list-group-item beerListItem">
+      <div data-ng-repeat="beer in beers | orderBy:orderSettings.orderby" class="list-group-item beerListItem">
   			<div class="row">
-
                   <!-- Beer quantity, user can add and remove beers from list view -->
             <div class="col-md-2 text-center">
                     <input type="submit" ng-click="subtractBeer()" class="btn votingButton" value="-">
                     <big data-ng-model="beer.quantity" class="beerQuantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer()" class="btn votingButton" value="+">
-                </form>
             </div>
 
             <!-- Beer information, clickable, goes to view-beer.client.view -->
@@ -53,7 +50,7 @@
               <div class="col-md-10">
                 <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
                 <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-n-bind="beer.brewery"></span><span class="text-muted" data-ng-hide="!beer.brewery">, </span>
-                <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span> 
+                <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
               </div>
             </a>
 
