--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -1,65 +1,70 @@
 <section class="beerListBG" data-ng-controller="BeersController" data-ng-show="authentication.user" data-ng-init="find()">
-    <div class="page-header">
 
-        <!-- Header of the page -->
-        <h1>BierCell</h1>
-        <a type="button" class="btn btn-success" id="addBeerButton" href="/#!/beers/create">+</a>
+    <div class="mainMenu navbar navbar-fixed-top">
+        <a type="button" class="btn btn-success" href="/#!/beers/create">+</a>
+
+        <!-- "Order by" buttons -->
+        <div data-ng-repeat="button in buttons" class="btn-group inline">
+
+            <!-- Button itself, changes the order direction when pressed -->
+            <button ng-click="direction=direction=='+'?'-':'+';orderSettings.orderby=direction+button.param;order(orderSettings.orderby,authentication.user)"
+                    ng-class="direction==='-' ? 'dropdown' : 'dropup'"
+                    class="btn sortButton">{{button.title}} 
+                <span class="caret"></span>
+            </button>
+
+        </div>
 
         <!-- pull-right-->
-        <a type="button" class="btn btn-danger pull-right" id="logOutButton" href="/auth/signout">Log out!</a>
-        <li class="dropdown pull-right" style="list-style:none;" id="loggedUser">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
-				</a>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="/#!/settings/profile">Edit Profile</a>
-					</li>
-					<li>
-						<a href="/#!/settings/accounts">Manage Social Accounts</a>
-					</li>
-					<li data-ng-show="authentication.user.provider === 'local'">
-						<a href="/#!/settings/password">Change Password</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="/auth/signout">Signout</a>
-					</li>
-				</ul>
+        <a type="button" class="btn btn-danger pull-right" href="/auth/signout">Log out!</a>
+        <li class="dropdown pull-right btn btn-default" style="list-style:none;" id="loggedUser">
+            <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown">
+                <span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="/#!/settings/profile">Edit Profile</a>
+                </li>
+                <li>
+                    <a href="/#!/settings/accounts">Manage Social Accounts</a>
+                </li>
+                <li data-ng-show="authentication.user.provider === 'local'">
+                    <a href="/#!/settings/password">Change Password</a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <a href="/auth/signout">Signout</a>
+                </li>
+            </ul>
         </li>
-
     </div>
 
     <!-- Content root -->
-    <div class="list-group beerList" ng-init="orderSettings={orderby:'bestBefore',selected:'false'}">
+    <div class="list-group beerList" ng-init="orderSettings={orderby:authentication.user.orderPreference};direction='+'">
 
-        <div data-ng-repeat="button in buttons" class="btn-group inline">
-            <button ng-click="direction=direction=='+'?'-':'+';orderSettings.orderby=direction+button.param" class="btn sortButton">{{button.title}}</button>
-        </div>
-
-      <div data-ng-repeat="beer in beers | orderBy:orderSettings.orderby" class="list-group-item beerListItem">
-  			<div class="row">
-                  <!-- Beer quantity, user can add and remove beers from list view -->
-            <div class="col-md-2 text-center">
+        <div data-ng-repeat="beer in beers | orderBy:orderSettings.orderby" ng-class="beer.bestBefore<Date.now()?:'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item beerListItem">
+            <div class="row">
+                <!-- Beer quantity, user can add and remove beers from list view -->
+                <div class="col-md-2 text-center">
                     <input type="submit" ng-click="subtractBeer()" class="btn votingButton" value="-">
                     <big data-ng-model="beer.quantity" class="beerQuantity">{{ beer.quantity }}</big><input type="submit" ng-click="incrementBeer()" class="btn votingButton" value="+">
+                </div>
+
+                <!-- Beer information, clickable, goes to view-beer.client.view -->
+                <a href="#!/beers/{{beer._id}}">
+                    <div class="col-md-10">
+                        <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
+                        <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-n-bind="beer.brewery"></span><span class="text-muted" data-ng-hide="!beer.brewery">, </span>
+                        <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
+                    </div>
+                </a>
+
             </div>
-
-            <!-- Beer information, clickable, goes to view-beer.client.view -->
-            <a href="#!/beers/{{beer._id}}">
-              <div class="col-md-10">
-                <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
-                <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-n-bind="beer.brewery"></span><span class="text-muted" data-ng-hide="!beer.brewery">, </span>
-                <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
-              </div>
-            </a>
-
         </div>
-      </div>
     </div>
 
     <!-- Alert to user who has no beers. That's serious. -->
     <div class="alert alert-warning text-center" data-ng-hide="!beers.$resolved || beers.length">
-    	No Beers yet, why don't you <a href="/#!/beers/create">create one</a>?
+        No Beers yet, why don't you <a href="/#!/beers/create">create one</a>?
     </div>
 </section>
