--- a/public/modules/beers/views/list-beers.client.view.html
+++ b/public/modules/beers/views/list-beers.client.view.html
@@ -7,7 +7,7 @@
         <div data-ng-repeat="button in buttons" class="btn-group inline">
 
             <!-- Button itself, changes the order direction when pressed -->
-            <button ng-click="direction=direction=='+'?'-':'+';orderSettings.orderby=direction+button.param;order(orderSettings.orderby,authentication.user)"
+            <button ng-click="direction=direction=='+'?'-':'+';orderSettings.orderby=direction+button.param;preferences.order = orderSettings.orderby"
                     ng-class="direction==='-' ? 'dropdown' : 'dropup'"
                     class="btn sortButton">{{button.title}} 
                 <span class="caret"></span>
@@ -42,7 +42,7 @@
     <!-- Content root -->
     <div class="list-group beerList" ng-init="orderSettings={orderby:authentication.user.orderPreference};direction='+'">
 
-        <div data-ng-repeat="beer in beers | orderBy:orderSettings.orderby" ng-class="beer.bestBefore<Date.now()?:'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item beerListItem">
+        <div data-ng-repeat="beer in beers | orderBy:preferences.order" ng-class="beer.bestBefore<Date.now()?:'danger'" ng-class-odd="'odd'" ng-class-even="'even'" class="list-group-item beerListItem">
             <div class="row">
                 <!-- Beer quantity, user can add and remove beers from list view -->
                 <div class="col-md-2 text-center">
@@ -56,6 +56,7 @@
                         <h4 class="list-group-item-heading" data-ng-bind="beer.name"></h4>
                         <span class="text-muted" data-ng-hide="!beer.brewery">by </span><span class="text-muted" data-ng-hide="!beer.brewery" data-n-bind="beer.brewery"></span><span class="text-muted" data-ng-hide="!beer.brewery">, </span>
                         <span data-ng-hide="!beer.bestBefore">best before: </span><span data-ng-bind="beer.bestBefore|date:'mediumDate'"></span>
+                        <span data-ng-bind="preferences.order"></span>
                     </div>
                 </a>
 
